--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Discord bot for Genshin schedule, pulling data from [https://genshin.honeyhunterworld.com/](https://genshin.honeyhunterworld.com/)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
