--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.5",
     "googleapis": "^66.0.0",
-    "request": "^2.88.2"
+    "node-fetch": "^2.6.1"
   }
 }
